Finalize UI for course and profile pages

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -5,7 +5,7 @@
 <p>Welcome {{ user.name }}</p>
 <a href="/courses/browse"><button type="button" class="btn btn-primary">Browse Courses</button></a>
 <a href="/courses/enrolled"><button type="button" class="btn btn-primary">Enrolled Courses</button></a>
-<a href="#"><button type="button" class="btn btn-success">Wishlist</button></a>
+<a href="/courses/wishlist"><button type="button" class="btn btn-success">Wishlist</button></a>
 {% if role == 'teacher' %}
 <a href="#"><button type="button" class="btn btn-primary">Create A New Course</button></a>
 <h4>Your Courses</h4>
