--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,7 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
 <h1>Profile</h1>
+<a href="#"><button class="btn btn-warning">Edit Profile</button></a>
 <p>Username: {{ user.username }}</p>
 <p>Email: {{ user.email }}</p>
 <p>Name: {{ user.name }}</p>
