--- a/templates/courses.html
+++ b/templates/courses.html
@@ -19,8 +19,12 @@
     <tr>
         <td><a href="#">{{ course.name }}</a></td>
         <td>
-            <a href="#"><button type="button" class="btn btn-primary">View</button></a>
-            <a href="#"><button type="button" class="btn btn-danger">Unenroll</button></a>
+            <form action="/courses/description/{{course.id}}">
+                <input class="btn btn-primary" type="submit" value="View">
+            </form>
+            <form action="/courses/unenroll/{{course.id}}" method="post">
+                <input class="btn btn-danger" type="submit" value="Unenroll">
+            </form>
         </td>
     </tr>
     {% endfor %}
