Add functionality for editing a course for teachers

--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -8,6 +8,6 @@
     <input type="text" name="code" id="code"><br>
     <label for="description">Description</label><br>
     <textarea name="description" id="description"></textarea><br>
-    <input type="submit" value="Create">
+    <input class="btn btn-success" type="submit" value="Create">
 </form>
 {% endblock %}
