--- a/templates/courses.html
+++ b/templates/courses.html
@@ -46,8 +46,12 @@
         <tr>
             <td><a href="#">{{ course.name }}</a></td>
             <td>
-                <a href="#"><button type="button" class="btn btn-primary">Edit</button></a>
-                <a href="#"><button type="button" class="btn btn-danger">Delete</button></a>
+                <form action="/courses/edit/{{course.id}}">
+                    <input class="btn btn-primary" type="submit" value="Edit">
+                </form>
+                <form action="/courses/delete/{{course.id}}" method="post">
+                    <input class="btn btn-danger" type="submit" value="Delete">
+                </form>
             </td>
         </tr>
         {% endfor %}
