--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -8,6 +8,14 @@
     <input type="text" name="code" id="code"><br>
     <label for="description">Description</label><br>
     <textarea name="description" id="description"></textarea><br>
+    <div class="form-group"></div>
+    <label for="syllabus_pdf">Upload Syllabus (PDF)</label>
+    <input type="file" class="form-control" id="syllabus_pdf" name="syllabus_pdf[]" accept=".pdf" multiple>
+    </div>
+    <div class="form-group">
+        <label for="video">Upload Course Videos (MP4)</label>
+        <input type="file" class="form-control" id="video" name="video[]" accept=".mp4" multiple>
+    </div>
     <input class="btn btn-success" type="submit" value="Create">
 </form>
 {% endblock %}
