--- a/templates/index.html
+++ b/templates/index.html
@@ -2,28 +2,19 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <h1>Online Learning Platform</h1>
-<p>Welcome to the our learning hub</p>
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://picsum.photos/900/900" class="d-block w-100" alt="...">
+<p>Welcome to our learning hub</p>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Login</h2>
+            <p>If you already have an account, please log in to access your courses.</p>
+            <a href="/login" class="btn btn-primary">Login</a>
         </div>
-        <div class="carousel-item">
-            <img src="https://picsum.photos/900/900" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://picsum.photos/900/900" class="d-block w-100" alt="...">
+        <div class="col-md-6">
+            <h2>Register</h2>
+            <p>If you are new here, please register to start learning with us.</p>
+            <a href="/register" class="btn btn-success">Register</a>
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
 </div>
 {% endblock %}
