Refactor the code to use the factory format

--- a/app/templates/courses.html
+++ b/app/templates/courses.html
@@ -30,7 +30,7 @@
     {% endfor %}
     {% endif %}
     {% if role == 'teacher' %}
-    <a href="{{url_for('create_course')}}"><button type="button" class="btn btn-primary">Create A New
+    <a href="{{url_for('main.create_course')}}"><button type="button" class="btn btn-primary">Create A New
             Course</button></a>
     <h4>Your Courses</h4>
     <form class="d-flex" role="search">
