--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item"></li>
-                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
