--- a/app/templates/edit_course.html
+++ b/app/templates/edit_course.html
@@ -2,7 +2,7 @@
 {% block title %}Edit Course{% endblock %}
 {% block content %}
 
-<form action="{{ url_for('edit_course', course_id=course.id) }}" method="POST" enctype="multipart/form-data">
+<form action="{{ url_for('main.edit_course', course_id=course.id) }}" method="POST" enctype="multipart/form-data">
     <div class="form-group">
         <label for="name">Course Name</label>
         <input type="text" class="form-control" id="name" name="name" value="{{ course.name }}" required>
