--- a/app/templates/view_course.html
+++ b/app/templates/view_course.html
@@ -6,12 +6,12 @@
 
 <h3>Videos:</h3>
 {% for video in course.video_link.split(',') %}
-<a href="{{ url_for('download_file', filename=video) }}">Download {{video}}</a><br>
+<a href="{{ url_for('main.download_file', filename=video) }}">Download {{video}}</a><br>
 {% endfor %}
 
 <h3>Syllabus:</h3>
 {% for pdf in course.syllabus_pdf.split(',') %}
-<a href="{{ url_for('download_file', filename=pdf) }}">Download {{pdf}}</a><br>
+<a href="{{ url_for('main.download_file', filename=pdf) }}">Download {{pdf}}</a><br>
 {% endfor %}
 
 {% endblock %}
